public/css/style.css
/* ... */
.con-menubtn{height:24px !important;width:20px;float:left;margin:10px 0 0 0;background:#f6f6f6 url(../img/arrow.gif) center center no-repeat;position:relative;}
.con-menu{width:160px;margin:0;background:#f6f6f6;border:1px solid #000;position:absolute;margin:36px 0 0 0px; border:1px solid #848689;-moz-border-radius: 2px;border-radius: 2px;padding:4px 0 6px 0;right:24px;}
.con-menu a{color:#000;font-weight:bold;text-decoration:none;font-size:13px;}









/*editor*/
.editor{border:1px solid #58595b;width:100%;box-shadow: 0 1px 10px #666;-webkit-box-shadow: 0 1px 10px #666;position:relative;z-index:999;-moz-border-radius: 2px;border-radius: 2px;}
.editor, .editor .text{background:#fff;}

.loader{width:20px;height:20px;background:  url(../img/loading.gif) 0 0 no-repeat !important;position:absolute;left:-47px;bottom:-40px;display:none;background-size: 20px 20px !important}


@-moz-document url-prefix() {
   
   .loader{bottom:-40px;}
    .wrap {
     padding-bottom:15px !important;
    }
	  
   .editor .wrap {
     padding-bottom:31px !important;
    }
	
.editor .status{padding-bottom:8px !important;}
	
	
	
	
}

.loader_on{display:block !important}
.btnmargin {margin-right:-23px !important}

.source-title{margin:3px 0 0 20px !important;}
.target-title{float:right; margin:3px 30px 0 0}
.header{height:20px;width:100%; color:#a7a9ac; font-size:12px; float:left;text-align:left;background:#efefef;border-bottom:1px solid #ccc;margin-bottom:5px;-webkit-box-shadow: inset 0 1px 1px 1px #f4f7f9;box-shadow: inset 0 1px 1px 1px #f4f7f9;}









.close{background:url(../img/x.png) center 1px no-repeat;width:22px;height:20px;display:block;position:absolute;right:0;top:0;}
.close:hover, .close:focus, .x-stats:hover, .x-com:hover, .x-addcom:hover{background:url(../img/x.png) center -30px no-repeat;width:22px;height:20px;display:block;position:absolute;right:0;}


.h-text{width:auto;height:20px;display:block;position:absolute;left:10px;top:2px;color:#fff;font-size:12px;text-decoration:none;text-transform:none;}
.white{background:#fff url(../img/gray-point.gif) repeat-y 46.5% center !important;font-size:16px !important;position:relative;line-height:22px;float:left;width:100%;}
.percentuage{display:none;line-height:180%;height:20px;width:auto;text-align:center;width:25px;top:-9px;position:absolute;left:46.8%;color:#fff;font-size:11px;text-decoraton:none;font-weight:bold;text-decoration:none;cursor:default;padding:0 10px;}
/*
.editor .percentuage{display:block !important;}
*/


.percentuage.visible{display:block !Important}


.greenborder{border-top:2px solid #00a651; background:url(../img/pointgreen.gif) 0 0px no-repeat;}


.orangeborder{border-bottom:2px solid #FF6600;}
.greenborder img{margin:0px 0 0 -2px;position:absolute;}
.smart-suggestion-target{border:2px solid #00a651;-moz-border-radius: 2px;border-radius: 2px;padding:0 5px;-moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;-webkit-transition: all  100ms ease-in; -moz-transition: all  100ms ease-in;}
.qa{background:#FFCC00;-moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;padding:0 2px;}
.warning{background:#FFCC00;padding:2px 7px;text-align:center;border:1px solid #333;-moz-border-radius: 2px;border-radius: 2px;
-moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;display:block;position:absolute;bottom:-30px;font-size:12px;font-weight:bold}




.indent {text-indent:-20000px;}
.body .charleft {display:none;}
.text  {overflow:hidden;}
textarea,.editarea{position:relative;z-index:99;}

section.status-new .editarea
	{
	text-indent:-20000px;
	}
section.status-new.opened .editarea
	{
	text-indent:0;
	}

.source{line-height:30px;padding-top:9px !important;}
.editor .source
    {
    padding-top: 4px !important;
    font-size: 18px;
    }
.grayed-text{color:#4c4c4c;}
.textarea-container{height: inherit;table-layout: fixed;}
.editor .textarea-container{position:relative;width:100%;float:left;padding-bottom:5px;}


.text .item,
.white li
    {
    width: 45.5%;
    table-layout: fixed;
    float: none;
    margin: 0px 1px 0px 0;
    padding: 3px 20px;
    text-align: left;
    list-style: none;
    height: 95%;
    outline: none;
    }
.text a{text-decoration:none;color:#000 }



.editarea, .search-editarea
	{
	display: block; 
	float:right;
	width: 99%;
	height:96%;
	line-height:30px;
	min-height: 70px;
	resize: none;
	overflow:hidden;
	margin:2px 0 0px 10px;
	padding:5px;
	color:#4d4d4f;
	border:1px solid transparent;
	-moz-border-radius: 2px;
	border-radius: 2px;
	word-break: break-all;
 	hyphens: auto;
  	-moz-hyphens: auto;
	transition: all  50ms ease-in;
	-webkit-transition: all  50ms ease-in;
  	}







 .editarea div:last-child {margin-bottom:-22px !important;}



	
	
	
	
	

.editor .editarea
	{
	width: 100%;
	height: 96% !important;
	font-size:18px;
	color:#000;
	margin:-2px -10px 5px 10px;
	border:1px solid #727272;
	box-shadow: inset 0 1px 2px #ccc;
	-webkit-box-shadow: inset 0 1px 2px #ccc;
	word-wrap:break-word;
	transition:none;
	-webkit-transition: none;
	word-break: break-all;
	}

.editarea:hover 
	{
	border:1px solid #666;

	cursor:text;
	color:#000;
	}
    
body.rtl-target .editor .editarea span
	{
	display: inline-block;
	}
    
.search-editarea{overflow: auto;min-height:22px !important;cursor:text}

textarea, input, .editarea, .search-editarea, select  {
outline: none !important
}
.source{position:relative;z-index:999; word-break: break-all;
}
.suggestion_source,
.translation
	{
	word-break: break-all;
	}
	
.wrap {
    display: table;
   float:left;
    width: 99%;
height:100%;
padding-bottom:8px
	
}
.editor .wrap{padding-bottom:25px; height:87% !important;}




.editor .wrap {
    margin-bottom:0px;
	
}
.wrap:after{clear:both}

.text
	{
	}
.source
	{
	display: table-cell;
/*
	background-color: yellow;
*/
	vertical-align: top;
	padding-right: 26px !important;
	}
/* ... */

